--- a/app/templates/ComidasFitnessCarrossel.html
+++ b/app/templates/ComidasFitnessCarrossel.html
@@ -40,7 +40,7 @@
 
   <div id="linha-horizontal"></div>
   <h4 id="massafit">PARA O BOLO</h4>
-  <div id="linha-horizontal5"></div><br><br>
+  <div id="linha-horizontal5"></div>
   <h4 id="modospreparofit">INGREDIENTES</h4><br>
   <ul id="ingredientesfit">
     <h4>
