--- a/app/templates/SobremesasCarrossel.html
+++ b/app/templates/SobremesasCarrossel.html
@@ -22,9 +22,8 @@
 
     <iframe src="https://www.youtube.com/embed/jPsNaaC4sZ4" title="YouTube video player" class="BoloChocolate" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-    <h1 class="bolo">BOLO DE CHOCOLATE</h1>
-    <h1 class="recheio"> COM AMENDOIM</h1>
-    <h3 class="descricaosobre"> O segredo para deixar o bolo úmido sem precisar de calda está escondido bem aqui, nesta receita. E a combinação de chocolate com amendoim, hein? Um arraso.</h3></div>
+    <h1 class="bolo">BOLO DE CHOCOLATE COM AMENDOIM</h1>
+    <h3 class="descricaosobre"> O segredo para deixar o bolo úmido <br>sem precisar de calda está escondido <br>bem aqui, nesta receita. E a combinação <br>de chocolate com amendoim, hein? Um arraso.</h3></div>
     <h3 class="especificacoes">Autor(a)<strong> Panelinha</strong></h3>
     <h3 class="especificacoes">Tempo de preparo<strong> Até 2h </strong></h3>
     <h3 class="especificacoes">Rendimento<strong> 10 porções</strong></h3>
