--- a/app/templates/ComidasFitnessCarrossel.html
+++ b/app/templates/ComidasFitnessCarrossel.html
@@ -32,7 +32,7 @@
     <iframe src="https://www.youtube.com/embed/LoovDvUzsTg" title="YouTube video player" class="BoloBanana" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
     <h1 class="receita">BOLO DE BANANA COM AVEIA</h1>
-    <h3 class="descricaofit">No fim de semana, banana com aveia vira bolo. Mas você não precisa acordar com as galinhas para assar a massa. Faça no dia anterior, esconda, e, na hora de servir, corte em fatias para colocar na torradeira. O que pode ser mais gostoso do que bolo quentinho com manteiga derretendo?</h3></div>
+    <h3 class="descricaofit">No fim de semana, banana com aveia <br>vira bolo. Mas você não precisa acordar <br>com as galinhas para assar a massa. <br>Faça no dia anterior, esconda, e, na <br>hora de servir, corte em fatias para colocar <br>na torradeira. O que pode ser mais gostoso <br>do que bolo quentinho com manteiga derretendo?</h3></div>
 
   <h3 class="especificacoes">Autor(a)<strong> Panelinha</strong></h3>
   <h3 class="especificacoes">Tempo de preparo<strong> Até 1 hr </strong></h3>
