--- a/app/templates/MassasCarrossel.html
+++ b/app/templates/MassasCarrossel.html
@@ -19,7 +19,8 @@
     <iframe src="https://www.youtube.com/embed/tOjfJ7BMedA" title="YouTube video player" frameborder="0" class="Lasanha" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
     <h1 class="massalasanha">LASANHA À BOLONHESA</h1>
-    <h3 class="descricaomassa"> Lasanha a bolonhesa é um clássico que todo mundo ama. O bacana dessa receita é que o molho pode ser feito com antecedência, assim não se perde a manhã inteira do domingão na cozinha!</h3></div>
+    <h3 class="descricaomassa"> Lasanha a bolonhesa é um clássico que <br>todo mundo ama. O bacana dessa <br>receita é que o molho pode ser feito com <br>antecedência, assim não se perde a manhã <br>inteira do domingão na cozinha!</h3>
+    </div>
 
   <h3 class="especificacoes">Autor(a)<strong> Panelinha</strong></h3>
   <h3 class="especificacoes">Tempo de preparo<strong> Mais de 2h </strong></h3>
