--- a/app/templates/MassasCarrossel.html
+++ b/app/templates/MassasCarrossel.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="/static/css/carrossel.css">
         <link href="/static/css/bootstrap.min.css" rel="stylesheet">
         <script src="/static/js/bootstrap.bundle.min.js"></script>
-</head
+</head>
 
 
 
@@ -77,7 +77,7 @@
 
       <h4 id="modospreparomassas">MODO DE PREPARO</h4>
       <h4 class="text-break"><strong>1.</strong> Numa panela média, coloque a manteiga e leve ao fogo baixo. Quando derreter, acrescente a farinha de trigo e mexa por 2 minutos com uma colher de bambu ou espátula de silicone.<h4><br>
-      <h4 class="text-break"><strong>2.</strong>Retire a panela do fogo e, sem parar de mexer, acrescente metade do leite. Mexa vigorosamente e, de preferência, com um batedor de arame para desmanchar os gruminhos de farinha. Volte a panela ao fogo médio, junte o restante do leite e continue mexendo até ferver.</h4><br>
+      <h4 class="text-break"><strong>2.</strong> Retire a panela do fogo e, sem parar de mexer, acrescente metade do leite. Mexa vigorosamente e, de preferência, com um batedor de arame para desmanchar os gruminhos de farinha. Volte a panela ao fogo médio, junte o restante do leite e continue mexendo até ferver.</h4><br>
       <h4 class="text-break"><strong>3.</strong> Quando começar a ferver, abaixe o fogo e tempere com sal, pimenta-do-reino e noz-moscada. Deixe cozinhar por cerca de 12 minutos, mexendo de vez em quando até o molho engrossar levemente (ele deve ficar ainda líquido pois irá hidratar a massa e engrossar durante o cozimento no forno).</h4>
       <div id="linha-horizontal"></div>
       <h4 id="molho"> PARA A MONTAGEM </h4>
@@ -90,7 +90,7 @@
               </ul>
             </h4>
 
-            <h4 id="modospreparomassas">MODO DE PREPARO</h4>
+            <h4 id="modospreparomassas"> MODO DE PREPARO</h4>
             <h4 class="text-break"><strong>1.</strong> Preaqueça o forno a 180 ºC (temperatura média).</h4><br>
             <h4 class="text-break"><strong>2.</strong> Quebre as folhas de massa de lasanha uma a uma, ao meio, formando 2 quadrados (dessa forma fica mais fácil cortar e servir a lasanha sem que ela despedace).</h4><br>
             <h4 class="text-break"><strong>3.</strong> Numa travessa refratária de 32 cm x 24 cm, coloque um pouco de molho branco no fundo e, em seguida, uma camada de molho à bolonhesa. Sobre os molhos, coloque uma camada de massa cobrindo todo o fundo da travessa.</h4><br>
