--- a/app/templates/SobremesasCarrossel.html
+++ b/app/templates/SobremesasCarrossel.html
@@ -1,30 +1,37 @@
 <html>
 
 
+
+
+
 <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width">
         <link rel="stylesheet" href="/static/css/carrossel.css">
         <link href="/static/css/bootstrap.min.css" rel="stylesheet">
         <script src="/static/js/bootstrap.bundle.min.js"></script>
-</head
+</head>
+
+
+
+
+
+
+
+
+
 
 
 <body>
   <title>Sobremesas</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet">
-  <div class="row">
-    <div class="col-xs-12 col-sm-6 col-md-7 "></div>
-    <div class="row no-gutter-xs visible-xs"></div>
-    <div class="col-xs-1 col-sm-1 col-md-1"></div>
+
 
     <iframe src="https://www.youtube.com/embed/jPsNaaC4sZ4" title="YouTube video player" class="BoloChocolate" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
     <h1 class="bolo">BOLO DE CHOCOLATE COM AMENDOIM</h1>
-    <h3 class="descricaosobre"> O segredo para deixar o bolo úmido <br>sem precisar de calda está escondido <br>bem aqui, nesta receita. E a combinação <br>de chocolate com amendoim, hein? Um arraso.</h3></div>
-    <h3 class="especificacoes">Autor(a)<strong> Panelinha</strong></h3>
+    <h3 class="descricaosobre"> O segredo para deixar o bolo úmido sem precisar de calda está escondido bem aqui, nesta receita. E a combinação de chocolate com amendoim, hein? Um arraso.</h3>
+
+    <h3 class="especificacoesautor">Autor(a)<strong> Panelinha</strong></h3>
     <h3 class="especificacoes">Tempo de preparo<strong> Até 2h </strong></h3>
     <h3 class="especificacoes">Rendimento<strong> 10 porções</strong></h3>
 
@@ -32,7 +39,7 @@
    <div id="linha-horizontal"></div>
    <h4 id="massabolo">PARA A MASSA</h4>
    <div id="linha-horizontal6"></div>
-   <h4 id="modospreparosobre">INGREDIENTES</h4><br>
+   <h4 id="modospreparosobre">INGREDIENTES</h4>
    <ul id="igredientesSobre">
     <h4>
       <li>2 xícaras (chá) de farinha de trigo</li>
@@ -75,8 +82,7 @@
 
       <h4 id="modospreparosobre">MODO DE PREPARO</h4>
       <h4 class="text-break"><strong>1.</strong> Coloque o chocolate numa tigela de vidro e leve para rodar no micro-ondas, em potência média, de 30 em 30 segundos até derreter, mexa a cada etapa para não queimar e derreter de maneira uniforme. Reserve.<h4><br>
-      <h4 class="text-break"><strong>2.</strong> Numa frigideira pequena, coloque o amendoim e leve ao fogo médio para aquecer por 5 minutos, mexendo de vez em quando, até ficar levemente tostado. Transfira o amendoim ainda quente para o liquidificador e bata, no modo pulsar, até formar uma farofa úmida se necessário, pare de bater e raspe a lateral do copo com uma espátula para misturar. Junte o óleo, o chocolate derretido e bata bem até formar uma pasta.
-      <h4><br>
+      <h4 class="text-break"><strong>2.</strong> Numa frigideira pequena, coloque o amendoim e leve ao fogo médio para aquecer por 5 minutos, mexendo de vez em quando, até ficar levemente tostado. Transfira o amendoim ainda quente para o liquidificador e bata, no modo pulsar, até formar uma farofa úmida se necessário, pare de bater e raspe a lateral do copo com uma espátula para misturar. Junte o óleo, o chocolate derretido e bata bem até formar uma pasta.</h4><br>
       <h4 class="text-break"><strong>3.</strong> Transfira para uma tigela e leve à geladeira para esfriar por cerca de 40 minutos, ou até que as bordas estejam firmes e o centro ainda derretido, assim a pasta fica na consistência ideal para rechear e cobrir o bolo. Mexa bem com uma colher e mantenha em temperatura ambiente até a hora de usar. Se preferir, prepare o creme de chocolate com antecedência e mantenha na geladeira até a hora de montar o bolo. Basta reaquecer no micro-ondas, de 10 em 10 segundos, mexendo a cada etapa até ficar macio novamente.</h4>
 
               <div id="linha-horizontal"></div>
